# white

./: README.md
test/: Cargo.toml  bench.sh
test/src/: main.rs
wcat/: README.md  big.txt  tabs.txt  wcat.asm
