[package]
name = "wcat-tests"
version = "0.1.0"
edition = "2021"
authors = ["Adrian NOYES"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
tempfile = "3.23"
walkdir = "2.5"
nix = { version = "0.30", default-features = false, features = ["fs"] }
which = "8.0"
